src/test/ui/regions/regions-reborrow-from-shorter-mut-ref-mut-ref.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-reborrow-from-shorter-mut-ref-mut-ref.rs:14:5
   |
LL | fn copy_borrowed_ptr<'a, 'b, 'c>(p: &'a mut &'b mut &'c mut isize) -> &'b mut isize {
   |                      --  -- lifetime `'b` defined here
   |                      |
   |                      lifetime `'a` defined here
LL |     &mut ***p //~ ERROR 14:5: 14:14: lifetime mismatch [E0623]
   |     ^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: aborting due to previous error

